--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "chat-layout-analyzer"
+name = "screenshotanalysis"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
@@ -9,17 +9,16 @@ dependencies = [
     "Pillow>=9.0.0",
     "python-dotenv>=1.0.0",
     "pypdfium2>=5.2.0",
-    "paddle>=1.2.0",
     "paddlex>=3.3.12",
-    "opencv-python>=4.12.0.88",
-    "opencv-contrib-python==4.12.0.88",
+    "opencv-python==4.10.0.84",
+    "opencv-contrib-python==4.10.0.84",
     "validators>=0.35.0",
     "statistics>=1.0.3.5",
     "joblib>=1.5.3",
+    "scikit-learn>=1.8.0",
+    "snapy==1.1.8",
 ]
 
-[project.scripts]
-chat-layout-analyzer = "chat_layout_analyzer:main"
 
 
 [build-system]
