--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "joblib>=1.5.3",
     "scikit-learn>=1.8.0",
     "snapy==1.1.8; sys_platform == 'linux'",
+    "hypothesis>=6.150.2",
 ]
 
 
